--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <script>
     // --- GLOBAL STATE & CONFIG ---
     var appState = {
-        adminPassword: "seminar-keren-2025", // Ganti password di sini
+        adminPassword: "seminar-hatti-jateng", // Ganti password di sini
         googleSheetUrl: '',
         geminiApiKey: '',
         bitlyToken: '',
